--- a/README.asciidoc
+++ b/README.asciidoc
@@ -75,7 +75,7 @@ If you want to deploy your documentation to maven central run:
 mvn deploy -P oss
 --------
 
-It is a common pattern to store all the images used in a folder called "images", so docgen search in "images" as default. If you want to specify other directory or multiple, it can be done as follows:
+It is a common practice to store all the images used in a folder called "images", so docgen search in "images" as default. If you want to specify other directory or multiple, it can be done as follows:
 
 [source,cmd]
 --------
