--- a/README.asciidoc
+++ b/README.asciidoc
@@ -74,7 +74,7 @@ Then you will find the result in `target/generated-docs/`.
 If you want to deploy your documentation to maven central run:
 [source,cmd]
 --------
-mvn deploy -P oss
+mvn deploy -Dgpg.keyname=<yourkeyname> -Poss
 --------
 
 It is a common practice to store all the images used in a folder called "images", so docgen search in "images" as default. If you want to specify other directory or multiple, it can be done as follows:
